--- a/index.html
+++ b/index.html
@@ -811,6 +811,6 @@
             <button class="nav-item" id="nav-tools" onclick="app.nav('tools')"><i class="material-icons-round">build</i>Tools</button>
         </nav>
         <button class="fab" onclick="app.openModal()">+</button>
-</div><script src="app.js"></script>
+</div><script src="app.js">
 </body>
 </html>
