--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="css/style.css" media="screen">
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
 
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/transition.js"></script>
     <script type="text/javascript" src="js/collapse.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
     
     <script src="bitcoin.js"></script>
 </head>
@@ -811,6 +815,8 @@
             <button class="nav-item" id="nav-tools" onclick="app.nav('tools')"><i class="material-icons-round">build</i>Tools</button>
         </nav>
         <button class="fab" onclick="app.openModal()">+</button>
-</div><script src="app.js">
+    <script src="app.js"></script>
+
 </body>
 </html>
+
