--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>BankrollOS</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
@@ -817,3 +817,4 @@
 
 </body>
 </html>
+
