--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@ input, select, textarea {
 }
 
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<link rel="stylesheet" href="https://npmcdn.com/flatpickr/dist/themes/dark.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+
 </head>
 <body>
     <div id="app">
@@ -276,6 +284,20 @@ input, select, textarea {
 
         <div id="view-tickets" class="container" style="display:none;">
             <div class="row" style="margin-bottom:10px; padding: 0 4px;">
+            <div class="card">
+    <h2>LIVE SPORTS TICKER</h2>
+    <div style="display:flex; gap:10px; margin-bottom:10px;">
+        <select id="sport-key">
+            <option value="basketball_nba">NBA</option>
+            <option value="americanfootball_nfl">NFL</option>
+            <option value="baseball_mlb">MLB</option>
+            <option value="icehockey_nhl">NHL</option>
+        </select>
+        <button class="btn btn-primary" style="width:auto; margin:0;" onclick="app.fetchSports()">LOAD GAMES</button>
+    </div>
+    <div id="sports-ticker-res"></div>
+</div>
+
                 <h2 style="margin:0;">ACTIVE TICKETS</h2>
                 <button onclick="app.openTicketModal()" style="background:none; border:none; color:var(--intense-orange); font-size:24px;">+</button>
             </div>
@@ -713,6 +735,30 @@ input, select, textarea {
                     </div>
                 </div>
             </div>
+<div class="card">
+    <h2>NETWORK FEES & QR TOOLS</h2>
+    <div class="grid">
+        <div style="text-align:center; padding:10px; background:#1a1a1a; border-radius:6px; border:1px solid #333;">
+            <div style="font-size:0.7rem; color:#aaa;">FASTEST</div>
+            <div id="fee-fast" style="font-size:1.2rem; font-weight:bold; color:#D50000;">-</div>
+            <div style="font-size:0.6rem; color:#555;">sats/vB</div>
+        </div>
+        <div style="text-align:center; padding:10px; background:#1a1a1a; border-radius:6px; border:1px solid #333;">
+            <div style="font-size:0.7rem; color:#aaa;">ECONOMY</div>
+            <div id="fee-eco" style="font-size:1.2rem; font-weight:bold; color:#00E676;">-</div>
+            <div style="font-size:0.6rem; color:#555;">sats/vB</div>
+        </div>
+    </div>
+    <button class="btn btn-sec" onclick="app.getFees()">REFRESH FEE RATES</button>
+    
+    <hr style="border:0; border-top:1px solid #333; margin:15px 0;">
+    
+    <label>GENERATE QR CODE</label>
+    <input type="text" id="qr-input" placeholder="Paste Address or Text..." oninput="app.makeQR()">
+    <div style="display:flex; justify-content:center; margin-top:10px; background:#fff; padding:10px; border-radius:6px;">
+        <div id="qrcode"></div>
+    </div>
+</div>
 
             <div class="card" style="border-top: 4px solid #D50000;">
                 <h2>RAW TRANSACTION BUILDER (SPEND)</h2>
