--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
         <button class="btn btn-sec" style="width:auto; padding:4px 8px; font-size:0.65rem;" onclick="app.kalshi.fetch()">REFRESH</button>
     </div>
     
-    <div class="filter-row-top" style="margin-bottom:10px; gap:6px;">
-        <div class="filter-chip active" id="k-cat-all" onclick="app.kalshi.setCat('all')">ALL</div>
+        <div class="filter-row-top" style="margin-bottom:10px; gap:6px;">
+        <div class="filter-chip active" id="k-cat-all" onclick="app.kalshi.setCat('all')">TOP</div>
+        <div class="filter-chip" id="k-cat-sports" onclick="app.kalshi.setCat('Sports')">SPORTS</div>
+        <div class="filter-chip" id="k-cat-mentions" onclick="app.kalshi.setCat('Mentions')">MENTIONS</div>
         <div class="filter-chip" id="k-cat-politics" onclick="app.kalshi.setCat('Politics')">POLITICS</div>
         <div class="filter-chip" id="k-cat-economics" onclick="app.kalshi.setCat('Economics')">ECON</div>
-        <div class="filter-chip" id="k-cat-financials" onclick="app.kalshi.setCat('Financials')">STOCKS</div>
-        <div class="filter-chip" id="k-cat-tech" onclick="app.kalshi.setCat('Technology')">TECH</div>
-        <div class="filter-chip" id="k-cat-culture" onclick="app.kalshi.setCat('Culture')">CULTURE</div>
     </div>
+
 
     <div style="display:flex; gap:8px; margin-bottom:10px;">
         <input type="text" id="kalshi-search" placeholder="Search Events (e.g. Trump, Rain)..." style="margin:0;" onkeyup="app.kalshi.render()">
