--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@
             <button class="nav-item" id="nav-crypto" onclick="app.nav('crypto')"><i class="material-icons-round">currency_bitcoin</i>Crypto</button>
             <button class="nav-item" id="nav-stats" onclick="app.nav('stats')"><i class="material-icons-round">bar_chart</i>Stats</button>
             <button class="nav-item" id="nav-tools" onclick="app.nav('tools')"><i class="material-icons-round">build</i>Tools</button>
-            <button class="nav-item" id="nav-parlay" onclick="app.nav('parlay')"><i class="material-icons-round">build</i>Parlays</button>
+            <button class="nav-item" id="nav-parlay" onclick="app.nav('parlay')"><i class="material-icons-round">receipt</i>Parlays</button>
 
         </nav>
         <button class="fab" onclick="app.openModal()">+</button>
