--- a/index.html
+++ b/index.html
@@ -312,37 +312,45 @@
             </div>
         </div>
 
+<div id="sticky-header" style="position:sticky; top:0; z-index:100; background:rgba(14, 17, 23, 0.95); backdrop-filter:blur(10px); border-bottom:1px solid #333; padding:12px 16px; margin-bottom:15px;">
+    
+    <div style="display:flex; justify-content:space-between; align-items:flex-end; margin-bottom:8px;">
+        <div>
+            <div style="font-size:0.7rem; color:#aaa; letter-spacing:1px;">NET WORTH</div>
+            <div id="total-assets" style="font-size:1.8rem; font-weight:bold; color:#fff; line-height:1.1;">$0</div>
+        </div>
+        <button onclick="app.editGoal()" style="background:none; border:none; padding:0;">
+            <i class="material-icons-round" style="color:#555; font-size:1.2rem;">edit</i>
+        </button>
+    </div>
 
-        <div id="view-dash" class="container">
-            <div class="card" id="goal-card">
-                <div class="row">
-                    <h2 style="margin:0;" id="goal-label">BANKROLL GOAL</h2>
-                    <button onclick="app.openGoalModal()" style="background:none; border:none; color:var(--sub); font-size:16px;"><i class="material-icons-round">edit</i></button>
-                </div>
-                <div class="row" style="margin-top:8px;">
-                    <span style="font-size:0.8rem; color:#fff;" id="goal-current">$0</span>
-                    <span style="font-size:0.8rem; color:var(--sub);" id="goal-target">/ $10,000</span>
-                </div>
-                <div class="progress-container">
-                    <div class="progress-bar" id="goal-bar"></div>
-                </div>
-                <div style="text-align:right; font-size:0.6rem; color:var(--primary); margin-top:4px;" id="goal-pct">0%</div>
-            </div>
+    <div style="margin-bottom:10px;">
+        <div style="display:flex; justify-content:space-between; font-size:0.65rem; color:#777; margin-bottom:2px;">
+            <span id="goal-progress-text">0% to Goal</span>
+            <span id="goal-target-text">$100k</span>
+        </div>
+        <div style="height:6px; background:#222; border-radius:3px; overflow:hidden;">
+            <div id="goal-bar" style="height:100%; width:0%; background:linear-gradient(90deg, #00FF41, #00E676); transition:width 1s cubic-bezier(0.4, 0, 0.2, 1);"></div>
+        </div>
+    </div>
 
-            <div class="card">
-                <h2 style="margin-bottom:5px;">NET LIQUIDITY (TOTAL)</h2>
-                <div class="big-val" id="total-liquidity">$0.00</div>
-                <div style="margin-top: 15px; border-top: 1px solid #333; padding-top: 10px;">
-                    <div class="row">
-                        <span style="font-size:0.8rem; color:var(--sub); text-transform:uppercase;">Period P/L</span>
-                        <span id="period-profit" class="sub-val">$0.00</span>
-                    </div>
-                </div>
-                <div class="row" style="margin-top: 10px;">
-                    <div><span style="font-size:0.7rem; color:var(--crypto);">CRYPTO</span> <span id="crypto-mini" style="font-weight:bold;">$0</span></div>
-                    <div><span style="font-size:0.7rem; color:var(--job);">401K</span> <span id="401k-mini" style="font-weight:bold;">$0</span></div>
-                </div>
-            </div>
+    <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; gap:8px;">
+        <div style="background:#1A1C24; padding:6px; border-radius:4px; text-align:center;">
+            <div style="font-size:0.6rem; color:#aaa;">BANKROLL</div>
+            <div id="bankroll-display" style="font-size:0.9rem; color:#00FF41;">$0</div>
+        </div>
+        <div style="background:#1A1C24; padding:6px; border-radius:4px; text-align:center;">
+            <div style="font-size:0.6rem; color:#aaa;">CRYPTO</div>
+            <div id="crypto-total-header" style="font-size:0.9rem; color:#b388ff;">$0</div>
+        </div>
+        <div style="background:#1A1C24; padding:6px; border-radius:4px; text-align:center;">
+            <div style="font-size:0.6rem; color:#aaa;">401K</div>
+            <div id="401k-display" style="font-size:0.9rem; color:#fff;">$0</div>
+        </div>
+    </div>
+</div>
+
+        
             <div id="tx-list"></div>
         </div>
 
