--- a/index.html
+++ b/index.html
@@ -1412,6 +1412,34 @@
         <div id="k-log" style="margin-top:10px; font-family:'Courier New'; font-size:0.65rem; color:#00E676; min-height:60px; max-height:150px; overflow-y:auto; background:#000; padding:10px; border-radius:4px; border:1px solid #333;">
             System Ready...
         </div>
+            <div class="card" style="border-top: 4px solid #00E676;">
+        <h2>MARKET SCANNER</h2>
+        <div style="display:flex; gap:8px; margin-bottom:10px;">
+            <input type="text" id="bot-search" placeholder="e.g. Trump, Rain, GDP, Chiefs" style="margin:0;">
+            <button class="btn btn-sec" style="width:auto;" onclick="app.bot.searchMarkets(document.getElementById('bot-search').value)">
+                <i class="material-icons-round">search</i>
+            </button>
+        </div>
+        <div id="bot-market-list" style="max-height:300px; overflow-y:auto;">
+            <div style="text-align:center; color:#555; padding:20px;">Search to find markets...</div>
+        </div>
+    </div>
+
+    <div class="card" style="border-top: 4px solid #D50000;">
+        <h2>EXECUTION BOX (LIVE)</h2>
+        <div class="grid">
+            <div><label>TICKER</label><input type="text" id="trade-ticker" readonly style="color:#aaa;"></div>
+            <div><label>SIDE</label><select id="trade-side"><option value="yes">YES</option><option value="no">NO</option></select></div>
+        </div>
+        <div class="grid">
+            <div><label>PRICE (Cents)</label><input type="number" id="trade-price"></div>
+            <div><label>COUNT</label><input type="number" id="trade-count" value="1"></div>
+        </div>
+        <button class="btn btn-primary" style="background:#D50000; color:#fff; font-weight:bold; margin-top:10px;" onclick="app.bot.executeOrder()">
+            🚀 PLACE LIVE ORDER
+        </button>
+    </div>
+
     </div>
 </div>
 
