--- a/index.html
+++ b/index.html
@@ -1412,18 +1412,27 @@
         <div id="k-log" style="margin-top:10px; font-family:'Courier New'; font-size:0.65rem; color:#00E676; min-height:60px; max-height:150px; overflow-y:auto; background:#000; padding:10px; border-radius:4px; border:1px solid #333;">
             System Ready...
         </div>
-            <div class="card" style="border-top: 4px solid #00E676;">
+    <div class="card" style="border-top: 4px solid #00E676;">
         <h2>MARKET SCANNER</h2>
+        
+        <div style="display:flex; gap:5px; margin-bottom:10px; overflow-x:auto;">
+            <button class="btn" style="font-size:0.7rem; padding:4px 8px; width:auto; background:#333;" onclick="app.bot.searchMarkets('Sports')">🏀 Sports</button>
+            <button class="btn" style="font-size:0.7rem; padding:4px 8px; width:auto; background:#333;" onclick="app.bot.searchMarkets('Politics')">⚖️ Politics</button>
+            <button class="btn" style="font-size:0.7rem; padding:4px 8px; width:auto; background:#333;" onclick="app.bot.searchMarkets('Economics')">📈 Econ</button>
+            <button class="btn" style="font-size:0.7rem; padding:4px 8px; width:auto; background:#333;" onclick="app.bot.searchMarkets('')">🔥 Top 100</button>
+        </div>
+
         <div style="display:flex; gap:8px; margin-bottom:10px;">
-            <input type="text" id="bot-search" placeholder="e.g. Trump, Rain, GDP, Chiefs" style="margin:0;">
+            <input type="text" id="bot-search" placeholder="Filter (e.g. Lakers, CPI, Trump)" style="margin:0;">
             <button class="btn btn-sec" style="width:auto;" onclick="app.bot.searchMarkets(document.getElementById('bot-search').value)">
                 <i class="material-icons-round">search</i>
             </button>
         </div>
-        <div id="bot-market-list" style="max-height:300px; overflow-y:auto;">
-            <div style="text-align:center; color:#555; padding:20px;">Search to find markets...</div>
+
+        <div id="bot-market-list" style="max-height:400px; overflow-y:auto;">
+            <div style="text-align:center; color:#555; padding:20px;">Select a category or search...</div>
         </div>
-    </div>
+
 
     <div class="card" style="border-top: 4px solid #D50000;">
         <h2>EXECUTION BOX (LIVE)</h2>
