--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,7 @@
         <div id="bot-market-list" style="max-height:400px; overflow-y:auto;">
             <div style="text-align:center; color:#555; padding:20px;">Select a category or search...</div>
         </div>
+    </div>
 
 
     <div class="card" style="border-top: 4px solid #D50000;">
